PT #163583926: Atom supports application.yaml for boot properties